memory_pool_based_allocator
* cmake

* bucket initial
** allocate, deallocate
** blocks processingoperations

* memory_pool interface
** get_instance
** get_size
** get_count

--- a/memory_pool_based_allocator/src/CMakeLists.txt
+++ b/memory_pool_based_allocator/src/CMakeLists.txt
@@ -2,8 +2,10 @@ add_library(static_pool_allocator)
 
 target_sources(static_pool_allocator
   PRIVATE
+    bucket.cpp
     static_pool_allocator.cpp
   PUBLIC
+    bucket.h
     static_pool_allocator.h
   )
 
