memory_pool_based_allocator
* cmake modified
* static_pool_allocator implementation
** interface
** initialize_memory_pool

--- a/memory_pool_based_allocator/src/CMakeLists.txt
+++ b/memory_pool_based_allocator/src/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(static_pool_allocator
     static_pool_allocator.cpp
   PUBLIC
     bucket.h
+    memory_pool.h
     static_pool_allocator.h
   )
 
